# nextflow-language-server

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
nextflow_lsp/: __init__.py
tests/: test_nextflow_lsp.py
