[tool.poetry]
name = "nextflow_lsp"
version = "0.0.1"
description = "nextflow language server"
authors = ["obonyojimmy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
